# quorum

./: .gitignore  Anchor.toml  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
anchor/: Cargo.toml  package-lock.json  tsconfig.json
anchor/programs/quorum/: Cargo.toml
anchor/programs/quorum/src/: error.rs
anchor/programs/quorum/src/contexts/: register_candidate.rs
anchor/programs/quorum/src/processors/: create_poll.rs  delete_poll.rs  initialize.rs  mod.rs  register_candidate.rs  vote.rs
anchor/programs/quorum/src/state/: candidate.rs  voter.rs
app/: next.config.ts  package-lock.json  package.json  wrangler.toml
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/create/: page.tsx
app/src/app/polls/: page.tsx
app/src/components/: CandidatesList.tsx  CandidatesRegist.tsx  Header.tsx  Navbar.tsx  WalletProvider.tsx
app/src/constants/types/: quorum.ts
app/src/hooks/: index.tsx  use-toast.ts
app/src/store/: store.ts
app/src/store/states/: globalStates.ts
programs/quorum/src/: lib.rs
programs/quorum/src/contexts/: create_poll.rs  delete_poll.rs  initialize.rs  vote.rs
programs/quorum/src/state/: counter.rs  mod.rs  poll.rs  registrations.rs
src/app/: globals.css  page.tsx
src/app/create/: page.tsx
src/app/polls/: page.tsx
src/app/polls/[pollId]/: page.tsx
src/components/: CandidatesList.tsx  CandidatesRegist.tsx  DeletePollButton.tsx  Navbar.tsx
src/components/ui/: toast.tsx
src/constants/idl/: quorum.json
src/store/: index.ts  provider.tsx
src/types/: index.ts
tests/: quorum.ts
(+3 files in other folders)
